[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-proxy"
version = "0.1.0"
description = "A FastAPI proxy application"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "aiofiles>=0.7.0",
    "httpx>=0.23.0",
    "pydantic>=2.0.0",
    "slowapi>=0.1.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.252",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # mccabe
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "PL",   # pylint
]
extend-ignore = [
    "PLR",  # Design related pylint codes
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]